--- a/test/grammar.html
+++ b/test/grammar.html
@@ -61,18 +61,34 @@
     <div class="railroads">
         <div>
             <h1>test</h1>
-            <svg class="railroad-diagram" width="161" height="62" viewBox="0 0 161 62">
+            <svg class="railroad-diagram" width="249" height="62" viewBox="0 0 249 62">
 <g transform="translate(.5 .5)">
 <path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
 <path d="M40 31h10"></path>
 <g>
 <path d="M50 31h0"></path>
-<path d="M110 31h0"></path>
-<rect x="50" y="20" width="60" height="22" rx="10" ry="10"></rect>
-<text x="80" y="35">final</text>
+<path d="M78 31h0"></path>
+<rect x="50" y="20" width="28" height="22"></rect>
+<text x="64" y="35">&#95;</text>
 </g>
-<path d="M110 31h10"></path>
-<path d="M 120 31 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
+<path d="M78 31h10"></path>
+<path d="M88 31h10"></path>
+<g>
+<path d="M98 31h0"></path>
+<path d="M150 31h0"></path>
+<rect x="98" y="20" width="52" height="22"></rect>
+<text x="124" y="35">prog</text>
+</g>
+<path d="M150 31h10"></path>
+<path d="M160 31h10"></path>
+<g>
+<path d="M170 31h0"></path>
+<path d="M198 31h0"></path>
+<rect x="170" y="20" width="28" height="22"></rect>
+<text x="184" y="35">&#95;</text>
+</g>
+<path d="M198 31h10"></path>
+<path d="M 208 31 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
 </g>
 </svg>
 
