--- a/test/grammar.html
+++ b/test/grammar.html
@@ -61,34 +61,57 @@
     <div class="railroads">
         <div>
             <h1>test</h1>
-            <svg class="railroad-diagram" width="249" height="62" viewBox="0 0 249 62">
+            <svg class="railroad-diagram" width="345" height="72" viewBox="0 0 345 72">
 <g transform="translate(.5 .5)">
-<path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
-<path d="M40 31h10"></path>
+<path d="M 20 31 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
+<path d="M40 41h10"></path>
 <g>
-<path d="M50 31h0"></path>
-<path d="M78 31h0"></path>
-<rect x="50" y="20" width="28" height="22"></rect>
-<text x="64" y="35">&#95;</text>
+<path d="M50 41h0"></path>
+<path d="M78 41h0"></path>
+<rect x="50" y="30" width="28" height="22"></rect>
+<text x="64" y="45">&#95;</text>
 </g>
-<path d="M78 31h10"></path>
-<path d="M88 31h10"></path>
+<path d="M78 41h10"></path>
+<path d="M88 41h10"></path>
 <g>
-<path d="M98 31h0"></path>
-<path d="M150 31h0"></path>
-<rect x="98" y="20" width="52" height="22"></rect>
-<text x="124" y="35">prog</text>
+<path d="M98 41h0"></path>
+<path d="M150 41h0"></path>
+<rect x="98" y="30" width="52" height="22"></rect>
+<text x="124" y="45">prog</text>
 </g>
-<path d="M150 31h10"></path>
-<path d="M160 31h10"></path>
+<path d="M150 41h10"></path>
+<path d="M160 41h10"></path>
 <g>
-<path d="M170 31h0"></path>
-<path d="M198 31h0"></path>
-<rect x="170" y="20" width="28" height="22"></rect>
-<text x="184" y="35">&#95;</text>
+<path d="M170 41h0"></path>
+<path d="M198 41h0"></path>
+<rect x="170" y="30" width="28" height="22"></rect>
+<text x="184" y="45">&#95;</text>
 </g>
-<path d="M198 31h10"></path>
-<path d="M 208 31 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
+<path d="M198 41h10"></path>
+<g>
+<path d="M208 41h0"></path>
+<path d="M304 41h0"></path>
+<path d="M208 41a10 10 0 0 0 10 -10v0a10 10 0 0 1 10 -10"></path>
+<g>
+<path d="M228 21h56"></path>
+</g>
+<path d="M284 21a10 10 0 0 1 10 10v0a10 10 0 0 0 10 10"></path>
+<path d="M208 41h20"></path>
+<g>
+<path d="M228 41h0"></path>
+<path d="M284 41h0"></path>
+<path d="M228 41h10"></path>
+<g>
+<path d="M238 41h0"></path>
+<path d="M274 41h0"></path>
+<rect x="238" y="30" width="36" height="22"></rect>
+<text x="256" y="45">ws</text>
+</g>
+<path d="M274 41h10"></path>
+</g>
+<path d="M284 41h20"></path>
+</g>
+<path d="M 304 41 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
 </g>
 </svg>
 
