--- a/test/grammar.html
+++ b/test/grammar.html
@@ -61,7 +61,7 @@
     <div class="railroads">
         <div>
             <h1>test</h1>
-            <svg class="railroad-diagram" width="345" height="72" viewBox="0 0 345 72">
+            <svg class="railroad-diagram" width="409" height="72" viewBox="0 0 409 72">
 <g transform="translate(.5 .5)">
 <path d="M 20 31 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
 <path d="M40 41h10"></path>
@@ -90,28 +90,28 @@
 <path d="M198 41h10"></path>
 <g>
 <path d="M208 41h0"></path>
-<path d="M304 41h0"></path>
+<path d="M368 41h0"></path>
 <path d="M208 41a10 10 0 0 0 10 -10v0a10 10 0 0 1 10 -10"></path>
 <g>
-<path d="M228 21h56"></path>
+<path d="M228 21h120"></path>
 </g>
-<path d="M284 21a10 10 0 0 1 10 10v0a10 10 0 0 0 10 10"></path>
+<path d="M348 21a10 10 0 0 1 10 10v0a10 10 0 0 0 10 10"></path>
 <path d="M208 41h20"></path>
 <g>
 <path d="M228 41h0"></path>
-<path d="M284 41h0"></path>
+<path d="M348 41h0"></path>
 <path d="M228 41h10"></path>
 <g>
 <path d="M238 41h0"></path>
-<path d="M274 41h0"></path>
-<rect x="238" y="30" width="36" height="22"></rect>
-<text x="256" y="45">ws</text>
+<path d="M338 41h0"></path>
+<rect x="238" y="30" width="100" height="22"></rect>
+<text x="288" y="45">(lexer) ws</text>
 </g>
-<path d="M274 41h10"></path>
+<path d="M338 41h10"></path>
 </g>
-<path d="M284 41h20"></path>
+<path d="M348 41h20"></path>
 </g>
-<path d="M 304 41 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
+<path d="M 368 41 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
 </g>
 </svg>
 
