--- a/test/grammar.html
+++ b/test/grammar.html
@@ -60,7 +60,315 @@
 <body>
     <div class="railroads">
         <div>
-            <h1>test</h1>
+            <h1>_</h1>
+            <svg class="railroad-diagram" width="177" height="72" viewBox="0 0 177 72">
+<g transform="translate(.5 .5)">
+<path d="M 20 31 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
+<g>
+<path d="M40 41h0"></path>
+<path d="M136 41h0"></path>
+<path d="M40 41a10 10 0 0 0 10 -10v0a10 10 0 0 1 10 -10"></path>
+<g>
+<path d="M60 21h56"></path>
+</g>
+<path d="M116 21a10 10 0 0 1 10 10v0a10 10 0 0 0 10 10"></path>
+<path d="M40 41h20"></path>
+<g>
+<path d="M60 41h0"></path>
+<path d="M116 41h0"></path>
+<path d="M60 41h10"></path>
+<g>
+<path d="M70 41h0"></path>
+<path d="M106 41h0"></path>
+<rect x="70" y="30" width="36" height="22"></rect>
+<text x="88" y="45">ws</text>
+</g>
+<path d="M106 41h10"></path>
+</g>
+<path d="M116 41h20"></path>
+</g>
+<path d="M 136 41 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
+</g>
+</svg>
+
+        </div>
+        <div>
+            <h1>word</h1>
+            <svg class="railroad-diagram" width="217" height="62" viewBox="0 0 217 62">
+<g transform="translate(.5 .5)">
+<path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
+<path d="M40 31h10"></path>
+<g>
+<path d="M50 31h0"></path>
+<path d="M166 31h0"></path>
+<rect x="50" y="20" width="116" height="22"></rect>
+<text x="108" y="35">(lexer) word</text>
+</g>
+<path d="M166 31h10"></path>
+<path d="M 176 31 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
+</g>
+</svg>
+
+        </div>
+        <div>
+            <h1>_</h1>
+            <svg class="railroad-diagram" width="177" height="72" viewBox="0 0 177 72">
+<g transform="translate(.5 .5)">
+<path d="M 20 31 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
+<g>
+<path d="M40 41h0"></path>
+<path d="M136 41h0"></path>
+<path d="M40 41a10 10 0 0 0 10 -10v0a10 10 0 0 1 10 -10"></path>
+<g>
+<path d="M60 21h56"></path>
+</g>
+<path d="M116 21a10 10 0 0 1 10 10v0a10 10 0 0 0 10 10"></path>
+<path d="M40 41h20"></path>
+<g>
+<path d="M60 41h0"></path>
+<path d="M116 41h0"></path>
+<path d="M60 41h10"></path>
+<g>
+<path d="M70 41h0"></path>
+<path d="M106 41h0"></path>
+<rect x="70" y="30" width="36" height="22"></rect>
+<text x="88" y="45">ws</text>
+</g>
+<path d="M106 41h10"></path>
+</g>
+<path d="M116 41h20"></path>
+</g>
+<path d="M 136 41 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
+</g>
+</svg>
+
+        </div>
+        <div>
+            <h1>_</h1>
+            <svg class="railroad-diagram" width="177" height="72" viewBox="0 0 177 72">
+<g transform="translate(.5 .5)">
+<path d="M 20 31 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
+<g>
+<path d="M40 41h0"></path>
+<path d="M136 41h0"></path>
+<path d="M40 41a10 10 0 0 0 10 -10v0a10 10 0 0 1 10 -10"></path>
+<g>
+<path d="M60 21h56"></path>
+</g>
+<path d="M116 21a10 10 0 0 1 10 10v0a10 10 0 0 0 10 10"></path>
+<path d="M40 41h20"></path>
+<g>
+<path d="M60 41h0"></path>
+<path d="M116 41h0"></path>
+<path d="M60 41h10"></path>
+<g>
+<path d="M70 41h0"></path>
+<path d="M106 41h0"></path>
+<rect x="70" y="30" width="36" height="22"></rect>
+<text x="88" y="45">ws</text>
+</g>
+<path d="M106 41h10"></path>
+</g>
+<path d="M116 41h20"></path>
+</g>
+<path d="M 136 41 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
+</g>
+</svg>
+
+        </div>
+        <div>
+            <h1>word</h1>
+            <svg class="railroad-diagram" width="217" height="62" viewBox="0 0 217 62">
+<g transform="translate(.5 .5)">
+<path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
+<path d="M40 31h10"></path>
+<g>
+<path d="M50 31h0"></path>
+<path d="M166 31h0"></path>
+<rect x="50" y="20" width="116" height="22"></rect>
+<text x="108" y="35">(lexer) word</text>
+</g>
+<path d="M166 31h10"></path>
+<path d="M 176 31 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
+</g>
+</svg>
+
+        </div>
+        <div>
+            <h1>expr_member</h1>
+            <svg class="railroad-diagram" width="153" height="62" viewBox="0 0 153 62">
+<g transform="translate(.5 .5)">
+<path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
+<path d="M40 31h10"></path>
+<g>
+<path d="M50 31h0"></path>
+<path d="M102 31h0"></path>
+<rect x="50" y="20" width="52" height="22"></rect>
+<text x="76" y="35">word</text>
+</g>
+<path d="M102 31h10"></path>
+<path d="M 112 31 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
+</g>
+</svg>
+
+        </div>
+        <div>
+            <h1>expr</h1>
+            <svg class="railroad-diagram" width="209" height="62" viewBox="0 0 209 62">
+<g transform="translate(.5 .5)">
+<path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
+<path d="M40 31h10"></path>
+<g>
+<path d="M50 31h0"></path>
+<path d="M158 31h0"></path>
+<rect x="50" y="20" width="108" height="22"></rect>
+<text x="104" y="35">expr&#95;member</text>
+</g>
+<path d="M158 31h10"></path>
+<path d="M 168 31 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
+</g>
+</svg>
+
+        </div>
+        <div>
+            <h1>completeexpression</h1>
+            <svg class="railroad-diagram" width="153" height="62" viewBox="0 0 153 62">
+<g transform="translate(.5 .5)">
+<path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
+<path d="M40 31h10"></path>
+<g>
+<path d="M50 31h0"></path>
+<path d="M102 31h0"></path>
+<rect x="50" y="20" width="52" height="22"></rect>
+<text x="76" y="35">expr</text>
+</g>
+<path d="M102 31h10"></path>
+<path d="M 112 31 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
+</g>
+</svg>
+
+        </div>
+        <div>
+            <h1>expression+</h1>
+            <svg class="railroad-diagram" width="265" height="62" viewBox="0 0 265 62">
+<g transform="translate(.5 .5)">
+<path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
+<path d="M40 31h10"></path>
+<g>
+<path d="M50 31h0"></path>
+<path d="M214 31h0"></path>
+<rect x="50" y="20" width="164" height="22"></rect>
+<text x="132" y="35">completeexpression</text>
+</g>
+<path d="M214 31h10"></path>
+<path d="M 224 31 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
+</g>
+</svg>
+
+        </div>
+        <div>
+            <h1>prod</h1>
+            <svg class="railroad-diagram" width="521" height="62" viewBox="0 0 521 62">
+<g transform="translate(.5 .5)">
+<path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
+<path d="M40 31h10"></path>
+<g>
+<path d="M50 31h0"></path>
+<path d="M102 31h0"></path>
+<rect x="50" y="20" width="52" height="22"></rect>
+<text x="76" y="35">word</text>
+</g>
+<path d="M102 31h10"></path>
+<path d="M112 31h10"></path>
+<g>
+<path d="M122 31h0"></path>
+<path d="M150 31h0"></path>
+<rect x="122" y="20" width="28" height="22"></rect>
+<text x="136" y="35">&#95;</text>
+</g>
+<path d="M150 31h10"></path>
+<path d="M160 31h10"></path>
+<g>
+<path d="M170 31h0"></path>
+<path d="M294 31h0"></path>
+<rect x="170" y="20" width="124" height="22"></rect>
+<text x="232" y="35">(lexer) arrow</text>
+</g>
+<path d="M294 31h10"></path>
+<path d="M304 31h10"></path>
+<g>
+<path d="M314 31h0"></path>
+<path d="M342 31h0"></path>
+<rect x="314" y="20" width="28" height="22"></rect>
+<text x="328" y="35">&#95;</text>
+</g>
+<path d="M342 31h10"></path>
+<path d="M352 31h10"></path>
+<g>
+<path d="M362 31h0"></path>
+<path d="M470 31h0"></path>
+<rect x="362" y="20" width="108" height="22"></rect>
+<text x="416" y="35">expression+</text>
+</g>
+<path d="M470 31h10"></path>
+<path d="M 480 31 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
+</g>
+</svg>
+
+        </div>
+        <div>
+            <h1>prog</h1>
+            <svg class="railroad-diagram" width="153" height="62" viewBox="0 0 153 62">
+<g transform="translate(.5 .5)">
+<path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
+<path d="M40 31h10"></path>
+<g>
+<path d="M50 31h0"></path>
+<path d="M102 31h0"></path>
+<rect x="50" y="20" width="52" height="22"></rect>
+<text x="76" y="35">prod</text>
+</g>
+<path d="M102 31h10"></path>
+<path d="M 112 31 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
+</g>
+</svg>
+
+        </div>
+        <div>
+            <h1>_</h1>
+            <svg class="railroad-diagram" width="177" height="72" viewBox="0 0 177 72">
+<g transform="translate(.5 .5)">
+<path d="M 20 31 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
+<g>
+<path d="M40 41h0"></path>
+<path d="M136 41h0"></path>
+<path d="M40 41a10 10 0 0 0 10 -10v0a10 10 0 0 1 10 -10"></path>
+<g>
+<path d="M60 21h56"></path>
+</g>
+<path d="M116 21a10 10 0 0 1 10 10v0a10 10 0 0 0 10 10"></path>
+<path d="M40 41h20"></path>
+<g>
+<path d="M60 41h0"></path>
+<path d="M116 41h0"></path>
+<path d="M60 41h10"></path>
+<g>
+<path d="M70 41h0"></path>
+<path d="M106 41h0"></path>
+<rect x="70" y="30" width="36" height="22"></rect>
+<text x="88" y="45">ws</text>
+</g>
+<path d="M106 41h10"></path>
+</g>
+<path d="M116 41h20"></path>
+</g>
+<path d="M 136 41 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
+</g>
+</svg>
+
+        </div>
+        <div>
+            <h1>final</h1>
             <svg class="railroad-diagram" width="409" height="72" viewBox="0 0 409 72">
 <g transform="translate(.5 .5)">
 <path d="M 20 31 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
