move entry rule to start & entry rule comment

--- a/test/grammar.html
+++ b/test/grammar.html
@@ -64,8 +64,66 @@
 </head>
 <body>
     <div class="railroads">
+        <a href="#final">Jump to start (final)</a>
         <div>
-            <h1>_</h1>
+            <h1 id="final">final <span style="font-weight:300;font-size:20px;">- Start</span></h1>
+            <svg class="railroad-diagram" width="345" height="72" viewBox="0 0 345 72">
+<g transform="translate(.5 .5)">
+<path d="M 20 31 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
+<path d="M40 41h10"></path>
+<g>
+<path d="M50 41h0"></path>
+<path d="M78 41h0"></path>
+<rect x="50" y="30" width="28" height="22"></rect>
+<text x="64" y="45">&#95;</text>
+</g>
+<path d="M78 41h10"></path>
+<path d="M88 41h10"></path>
+<g>
+<path d="M98 41h0"></path>
+<path d="M150 41h0"></path>
+<rect x="98" y="30" width="52" height="22"></rect>
+<text x="124" y="45">prog</text>
+</g>
+<path d="M150 41h10"></path>
+<path d="M160 41h10"></path>
+<g>
+<path d="M170 41h0"></path>
+<path d="M198 41h0"></path>
+<rect x="170" y="30" width="28" height="22"></rect>
+<text x="184" y="45">&#95;</text>
+</g>
+<path d="M198 41h10"></path>
+<g>
+<path d="M208 41h0"></path>
+<path d="M304 41h0"></path>
+<path d="M208 41a10 10 0 0 0 10 -10v0a10 10 0 0 1 10 -10"></path>
+<g>
+<path d="M228 21h56"></path>
+</g>
+<path d="M284 21a10 10 0 0 1 10 10v0a10 10 0 0 0 10 10"></path>
+<path d="M208 41h20"></path>
+<g>
+<path d="M228 41h0"></path>
+<path d="M284 41h0"></path>
+<path d="M228 41h10"></path>
+<g>
+<path d="M238 41h0"></path>
+<path d="M274 41h0"></path>
+<rect x="238" y="30" width="36" height="22" rx="10" ry="10"></rect>
+<text x="256" y="45">ws</text>
+</g>
+<path d="M274 41h10"></path>
+</g>
+<path d="M284 41h20"></path>
+</g>
+<path d="M 304 41 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
+</g>
+</svg>
+
+        </div>
+        <div>
+            <h1 id="_">_ <span style="font-weight:300;font-size:20px;"></span></h1>
             <svg class="railroad-diagram" width="177" height="72" viewBox="0 0 177 72">
 <g transform="translate(.5 .5)">
 <path d="M 20 31 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
@@ -98,7 +156,7 @@
 
         </div>
         <div>
-            <h1>word</h1>
+            <h1 id="word">word <span style="font-weight:300;font-size:20px;"></span></h1>
             <svg class="railroad-diagram" width="153" height="62" viewBox="0 0 153 62">
 <g transform="translate(.5 .5)">
 <path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
@@ -116,7 +174,7 @@
 
         </div>
         <div>
-            <h1>expressionlist</h1>
+            <h1 id="expressionlist">expressionlist <span style="font-weight:300;font-size:20px;"></span></h1>
             <svg class="railroad-diagram" width="553" height="92" viewBox="0 0 553 92">
 <g transform="translate(.5 .5)">
 <path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
@@ -182,7 +240,7 @@
 
         </div>
         <div>
-            <h1>string</h1>
+            <h1 id="string">string <span style="font-weight:300;font-size:20px;"></span></h1>
             <svg class="railroad-diagram" width="225" height="92" viewBox="0 0 225 92">
 <g transform="translate(.5 .5)">
 <path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
@@ -224,7 +282,7 @@
 
         </div>
         <div>
-            <h1>charclass</h1>
+            <h1 id="charclass">charclass <span style="font-weight:300;font-size:20px;"></span></h1>
             <svg class="railroad-diagram" width="193" height="62" viewBox="0 0 193 62">
 <g transform="translate(.5 .5)">
 <path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
@@ -242,7 +300,7 @@
 
         </div>
         <div>
-            <h1>ebnf_modifier</h1>
+            <h1 id="ebnf_modifier">ebnf_modifier <span style="font-weight:300;font-size:20px;"></span></h1>
             <svg class="railroad-diagram" width="121" height="80" viewBox="0 0 121 80">
 <g transform="translate(.5 .5)">
 <path d="M 20 20 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
@@ -274,7 +332,7 @@
 
         </div>
         <div>
-            <h1>expr_member</h1>
+            <h1 id="expr_member">expr_member <span style="font-weight:300;font-size:20px;"></span></h1>
             <svg class="railroad-diagram" width="441" height="281" viewBox="0 0 441 281">
 <g transform="translate(.5 .5)">
 <path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
@@ -455,7 +513,7 @@
 
         </div>
         <div>
-            <h1>expr</h1>
+            <h1 id="expr">expr <span style="font-weight:300;font-size:20px;"></span></h1>
             <svg class="railroad-diagram" width="377" height="92" viewBox="0 0 377 92">
 <g transform="translate(.5 .5)">
 <path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
@@ -513,7 +571,7 @@
 
         </div>
         <div>
-            <h1>js</h1>
+            <h1 id="js">js <span style="font-weight:300;font-size:20px;"></span></h1>
             <svg class="railroad-diagram" width="137" height="62" viewBox="0 0 137 62">
 <g transform="translate(.5 .5)">
 <path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
@@ -531,7 +589,7 @@
 
         </div>
         <div>
-            <h1>completeexpression</h1>
+            <h1 id="completeexpression">completeexpression <span style="font-weight:300;font-size:20px;"></span></h1>
             <svg class="railroad-diagram" width="297" height="92" viewBox="0 0 297 92">
 <g transform="translate(.5 .5)">
 <path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
@@ -589,7 +647,7 @@
 
         </div>
         <div>
-            <h1>expression+</h1>
+            <h1 id="expression+">expression+ <span style="font-weight:300;font-size:20px;"></span></h1>
             <svg class="railroad-diagram" width="529" height="92" viewBox="0 0 529 92">
 <g transform="translate(.5 .5)">
 <path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
@@ -655,7 +713,7 @@
 
         </div>
         <div>
-            <h1>wordlist</h1>
+            <h1 id="wordlist">wordlist <span style="font-weight:300;font-size:20px;"></span></h1>
             <svg class="railroad-diagram" width="393" height="92" viewBox="0 0 393 92">
 <g transform="translate(.5 .5)">
 <path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
@@ -721,7 +779,7 @@
 
         </div>
         <div>
-            <h1>prod</h1>
+            <h1 id="prod">prod <span style="font-weight:300;font-size:20px;"></span></h1>
             <svg class="railroad-diagram" width="601" height="212" viewBox="0 0 601 212">
 <g transform="translate(.5 .5)">
 <path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
@@ -931,7 +989,7 @@
 
         </div>
         <div>
-            <h1>prog</h1>
+            <h1 id="prog">prog <span style="font-weight:300;font-size:20px;"></span></h1>
             <svg class="railroad-diagram" width="321" height="92" viewBox="0 0 321 92">
 <g transform="translate(.5 .5)">
 <path d="M 20 21 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
@@ -984,63 +1042,6 @@
 <path d="M260 61a10 10 0 0 0 10 -10v-10a10 10 0 0 1 10 -10"></path>
 </g>
 <path d="M 280 31 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
-</g>
-</svg>
-
-        </div>
-        <div>
-            <h1>final</h1>
-            <svg class="railroad-diagram" width="345" height="72" viewBox="0 0 345 72">
-<g transform="translate(.5 .5)">
-<path d="M 20 31 v 20 m 10 -20 v 20 m -10 -10 h 20.5"></path>
-<path d="M40 41h10"></path>
-<g>
-<path d="M50 41h0"></path>
-<path d="M78 41h0"></path>
-<rect x="50" y="30" width="28" height="22"></rect>
-<text x="64" y="45">&#95;</text>
-</g>
-<path d="M78 41h10"></path>
-<path d="M88 41h10"></path>
-<g>
-<path d="M98 41h0"></path>
-<path d="M150 41h0"></path>
-<rect x="98" y="30" width="52" height="22"></rect>
-<text x="124" y="45">prog</text>
-</g>
-<path d="M150 41h10"></path>
-<path d="M160 41h10"></path>
-<g>
-<path d="M170 41h0"></path>
-<path d="M198 41h0"></path>
-<rect x="170" y="30" width="28" height="22"></rect>
-<text x="184" y="45">&#95;</text>
-</g>
-<path d="M198 41h10"></path>
-<g>
-<path d="M208 41h0"></path>
-<path d="M304 41h0"></path>
-<path d="M208 41a10 10 0 0 0 10 -10v0a10 10 0 0 1 10 -10"></path>
-<g>
-<path d="M228 21h56"></path>
-</g>
-<path d="M284 21a10 10 0 0 1 10 10v0a10 10 0 0 0 10 10"></path>
-<path d="M208 41h20"></path>
-<g>
-<path d="M228 41h0"></path>
-<path d="M284 41h0"></path>
-<path d="M228 41h10"></path>
-<g>
-<path d="M238 41h0"></path>
-<path d="M274 41h0"></path>
-<rect x="238" y="30" width="36" height="22" rx="10" ry="10"></rect>
-<text x="256" y="45">ws</text>
-</g>
-<path d="M274 41h10"></path>
-</g>
-<path d="M284 41h20"></path>
-</g>
-<path d="M 304 41 h 20 m -10 -10 v 20 m 10 -20 v 20"></path>
 </g>
 </svg>
 
